tests/NormalTests/paczka1/fuzzy1/93672794.err
Error in line 1: 9AHLyBnC S665 31,1
Error in line 10: m19ZCtI S442 38,1
Error in line 14: m19ZCtI A15 31,9
Error in line 11: A756 S665 2,2
Error in line 21: m19ZCtI S442 21,2
Error in line 31: 7wHIA8rq2K S442 62,4
Error in line 22: pwP A15 51,0
